Fix tap highlight color on mobile

--- a/templates/nuxt/base/assets/scss/main.scss
+++ b/templates/nuxt/base/assets/scss/main.scss
@@ -16,4 +16,5 @@ body {
 *::after,
 *::before {
   box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
